--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+
+  "name": "usersapi",
+  "main": "server.js",
+  "scripts":{
+    "start": "node server.js"
+  },
+
+
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
